# pg2017w_April_8_

ros/src/cooperative_driving/cooperative_driving/: CMakeLists.txt  mainpage.dox  package.xml
ros/src/cooperative_driving/cooperative_driving/config/: custom_rosconsole.conf
ros/src/cooperative_driving/cooperative_driving/doc/: architecture.dot
ros/src/cooperative_driving/cooperative_driving/launch/: demo_pc.launch  demo_raspi.launch  demo_statemachine.launch  remote_control.launch  robot_pc.launch  robot_raspi.launch
ros/src/cooperative_driving/cooperative_driving/scripts/: remote_control.py
ros/src/cooperative_driving/cooperative_driving_application/: CMakeLists.txt  setup.py
ros/src/cooperative_driving/cooperative_driving_application/config/: dynamic_parameters.cfg
ros/src/cooperative_driving/cooperative_driving_application/launch/: app-dev.launch  demo.launch  demo1.launch  demo_app.xml  statemachine.xml
ros/src/cooperative_driving/cooperative_driving_application/scripts/: demo_app.py  statemachine.py
ros/src/cooperative_driving/cooperative_driving_application/src/cooperative_driving_application/: __init__.py  _external_controller.py  _internal_controller.py  _message_util.py
ros/src/cooperative_driving/cooperative_driving_application/test/: CMakeLists.txt  message_util.py
ros/src/cooperative_driving/cooperative_driving_common/: CMakeLists.txt  setup.py
ros/src/cooperative_driving/cooperative_driving_common/include/cooperative_driving/: disable_ros_warnings_post.h  disable_ros_warnings_pre.h  pubscriber.h  util.h
ros/src/cooperative_driving/cooperative_driving_common/src/cooperative_driving_common/: __init__.py
ros/src/cooperative_driving/cooperative_driving_common/test/: CMakeLists.txt  pubscriber.test  test_pubscriber.cc  test_pubscriber.py
ros/src/cooperative_driving/cooperative_driving_hardware/: CMakeLists.txt  controller_interface_plugins.xml  nodelet_plugins.xml  package.xml
ros/src/cooperative_driving/cooperative_driving_hardware/config/: distance_sensor_controller.yaml  drive_controller.yaml  led_controller.yaml
ros/src/cooperative_driving/cooperative_driving_hardware/include/cooperative_driving/: ccs_hw.h  ccs_robot.h  distance_sensor_controller.h  distance_sensor_interface.h  led_controller.h  led_interface.h  util.h
ros/src/cooperative_driving/cooperative_driving_hardware/launch/: distance-controller.xml  drive-controller.xml  hardware_arm.xml  hardware_pc.launch  hardware_raspi.launch  hardware_x86_64.xml  led-controller-pi.xml  led-controller.launch  robot.xml
ros/src/cooperative_driving/cooperative_driving_hardware/msg/: DistanceValue.msg  DistanceValues.msg  LedCommand.msg  LedValue.msg  LedValues.msg
ros/src/cooperative_driving/cooperative_driving_hardware/scripts/: led_controller_pi.py
ros/src/cooperative_driving/cooperative_driving_hardware/src/: ccs_robot.cc  ccs_robot_nodelet.cc  distance_sensor_controller.cc  led_controller.cc
ros/src/cooperative_driving/cooperative_driving_logic/: CMakeLists.txt  nodelet_plugins.xml  package.xml
ros/src/cooperative_driving/cooperative_driving_logic/Dump/: dump.yaml  error.txt
ros/src/cooperative_driving/cooperative_driving_logic/RobotParameters/: ChangeLogicParameter.sh  ChangeVisionParameter.sh  CleanRelease.sh  CopyYaml.sh  RestartServer.sh  StartTheRobot.sh  StopTheRobot.sh  db.sqlite3  dump.yaml  error.txt  manage.py  parm.yaml  source.sh  sourced.txt
ros/src/cooperative_driving/cooperative_driving_logic/RobotParameters/RobotParameters/: settings.py  urls.py  wsgi.py
ros/src/cooperative_driving/cooperative_driving_logic/RobotParameters/RobotoParametersApp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ros/src/cooperative_driving/cooperative_driving_logic/RobotParameters/templates/: home.html  server.html  sliders.html  vision_sliders.html
ros/src/cooperative_driving/cooperative_driving_logic/config/: dynamic_parameters.cfg
ros/src/cooperative_driving/cooperative_driving_logic/include/cooperative_driving/: logic.h  pid_controller.h  reflekte_state_machine.h  simple_behaviors.h
ros/src/cooperative_driving/cooperative_driving_logic/launch/: logic.launch  logic.xml
ros/src/cooperative_driving/cooperative_driving_logic/msg/: ReflekteState.msg
ros/src/cooperative_driving/cooperative_driving_logic/src/: Change_configuration.sh  reflekte_nodelet.cc  reflekte_state_machine.cc
ros/src/cooperative_driving/cooperative_driving_logic/srv/: ChangeState.srv
ros/src/cooperative_driving/cooperative_driving_msgs/: CMakeLists.txt  package.xml
ros/src/cooperative_driving/cooperative_driving_msgs/msg/: Command.msg  Direction.msg  Directions.msg
ros/src/cooperative_driving/cooperative_driving_networking/: CMakeLists.txt
ros/src/cooperative_driving/cooperative_driving_networking/config/: wifi_dongles.yaml
ros/src/cooperative_driving/cooperative_driving_networking/launch/: networking.launch
ros/src/cooperative_driving/cooperative_driving_networking/msg/: CooperativeAwarenessMessage.msg  EmergencyBrake.msg  Platooning.msg  StringStamped.msg  Token.msg
ros/src/cooperative_driving/cooperative_driving_networking/scripts/: set_capabilities.sh
ros/src/cooperative_driving/cooperative_driving_networking/src/networking/: Makefile_noROS  main.cc  radiotap.c  transceiver.c  util.c  (+2 more)
ros/src/cooperative_driving/cooperative_driving_vision/: CMakeLists.txt  nodelet_plugins.xml  package.xml
ros/src/cooperative_driving/cooperative_driving_vision/config/: apriltags_settings.yaml  apriltags_tags.yaml  color_ranges.yaml  dynamic_parameters.cfg  robot_fisheye.yaml
ros/src/cooperative_driving/cooperative_driving_vision/launch/: feature_extraction.xml  feature_image_renderer.launch  vision.launch
ros/src/cooperative_driving/cooperative_driving_vision/msg/: Features.msg  Moment.msg  Region.msg
ros/src/cooperative_driving/cooperative_driving_vision/scripts/: dummy_camera.py  rangepicker.py
ros/src/cooperative_driving/cooperative_driving_vision/src/: feature_extraction_debugger.cc  feature_extractor.cc  feature_extractor_nodelet.cc  feature_image_renderer.cc
(+417 files in other folders)
