<?xml version="1.0"?>
<package format="2">
  <name>cooperative_driving_logic</name>
  <version>0.0.1</version>
  <description>The cooperative_driving logic package</description>

  <maintainer email="julian93@mail.upb.de">Julian Heinovski</maintainer>
  <maintainer email="descart@mail.upb.de">Sergej Japs</maintainer>
  <maintainer email="srinivas@mail.upb.de">Srinivas Krishnan</maintainer>
  <maintainer email="schettle@mail.upb.de">Max Schettler</maintainer>
  <maintainer email="psteffen@mail.upb.de">Patrick Steffens</maintainer>
  <maintainer email="dti@mail.upb.de">Daniel Tigges</maintainer>
  <license>BSD 3Clause</license>
  <url type="website">http://www.ccs-labs.org/teaching/pg/2016w/</url>
  <author email="julian93@mail.upb.de">Julian Heinovski</author>
  <author email="descart@mail.upb.de">Sergej Japs</author>
  <author email="srinivas@mail.upb.de">Srinivas Krishnan</author>
  <author email="schettle@mail.upb.de">Max Schettler</author>
  <author email="psteffen@mail.upb.de">Patrick Steffens</author>
  <author email="dti@mail.upb.de">Daniel Tigges</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cooperative_driving_common</depend>
  <depend>cooperative_driving_hardware</depend>
  <depend>cooperative_driving_networking</depend>
  <depend>cooperative_driving_vision</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>apriltags2_ros</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
